<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password length must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_text">Login</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="password_button_hint">Password</string>
    <string name="username_button_hint">Username</string>
    <string name="loading_panel_text">Loading...</string>
    <string name="message_list_is_empty_text">Message list is empty. Write something!</string>
    <string name="chat_list_is_empty_text">Chat list is empty. Start conversation!</string>
    <string name="user_online_status_online">online</string>
    <string name="user_online_status_offline">offline</string>
    <string name="application_error">Application error</string>
    <string name="user_profile_title">User Profile</string>
    <string name="create_a_chat_btn">Create a chat</string>
    <string name="add_user_to_chat_btn">Add this user to chat</string>
    <string name="about_hint">About</string>
    <string name="log_out_btn">Log out</string>
    <string name="enter_your_text_hint">Enter your text</string>
    <string name="current_password_hint">Enter your current password</string>
    <string name="log_out_hint">Log out</string>
    <string name="exit_title">Exit</string>
    <string name="enter_the_new_password_hint">Enter the new password</string>
    <string name="retype_your_new_password_hint">Retype your new password</string>
    <string name="confirm_new_password_btn">Confirm new password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="chat_creating_label">Chat creating</string>
    <string name="enter_chat_name_hint">Enter chat\'s name</string>
    <string name="about_optional_hint">About (optional)</string>
    <string name="create_btn">Create</string>
    <string name="start_the_dialog_label">Start the dialog</string>
    <string name="search_user_hint">Search user</string>
    <string name="chat_has_not_created_alert_text">The chat has not been created. Chat name might be unavailable, try again please or contact technical support</string>
    <string name="chat_has_created_alert_text">Chat has successfully created</string>
    <string name="delete_chat_btn">Delete chat</string>
    <string name="chat_details_title">Chat details</string>
    <string name="add_admin_btn">Make admin</string>
    <string name="delete_admin_btn">Unmake admin</string>
    <string name="delete_user_btn">Delete user</string>
    <string name="delete_member_btn">Delete member</string>
    <string name="leave_chat_btn">Leave chat</string>
    <string name="chat_admin_tooltip">Chat administrator</string>
    <string name="delete_message_title">Delete message</string>
</resources>