<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.screen.createChat.CreateChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/chatCreatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/chat_creating_label"/>

        <ImageView
            android:id="@+id/chatCreatingIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/ic_default_chat"
            app:layout_constraintTop_toBottomOf="@id/chatCreatingLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/chatCreatingNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/chatCreatingIcon"
            app:layout_constraintStart_toEndOf="@id/chatCreatingIcon"
            app:layout_constraintBottom_toBottomOf="@id/chatCreatingIcon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/enter_chat_name_hint"/>

        <EditText
            android:id="@+id/chatCreatingAboutET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chatCreatingIcon"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:hint="@string/about_optional_hint"/>

        <Button
            android:id="@+id/createChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chatCreatingAboutET"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:text="@string/create_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dialogCreatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:text="@string/start_the_dialog_label"/>

        <EditText
            android:id="@+id/userSearchET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialogCreatingLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/userSearchBtn"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/search_user_hint"/>

        <ImageButton
            android:id="@+id/userSearchBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/userSearchET"
            app:layout_constraintBottom_toBottomOf="@id/userSearchET"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foundedUsersRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/userSearchET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>